Use proc:full, but in profile for JDK 23 only
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>